--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ascii-table": "^0.0.9",
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "ws": "^7.5.0"
   }
 }
